postgres_students-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-student-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-students
  template:
    metadata:
      labels:
        app: postgres-students
    spec:
      containers:
        - name: postgres-students
          image: fadel2001/postgres_students:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
