ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-service  # Utilisez le nom correct du service
                port:
                  number: 8080  # Utilisez le port correct du service
